# blog-demos

./: .gitignore  README.md  SECURITY.md  TODOs.md
acid-state/: Main.hs  Makefile  acid-state.cabal  test.hs  test.sh
acid-state/results/: after-gc  gen_plot.sh  output
azpcs/: 1.c
azpcs-sa/: 1.c  Makefile
azpcs-ss-cc/: ss.cc
bacon/: bacon.hs
bio/: bio.hs
brainfsck/: bf.hs
candy-simulator/: README.md  candy-simulator.cabal  simulator.hs
conduit/: conduit-1.hs  conduit-2.hs
css-grid/: README.md  index.html
css-grid/B/: README.md  article.html  index.html
css-grid/B/A/: README.md  index.html
css-grid/B/A/css/: styles.css
css-grid/B/M/: README.md  index.html
css-grid/B/M/css/: styles.css
css-grid/B/css/: fonts.css  styles.css
css-grid/H/: README.md
css-grid/H/css/: styles.css
css-grid/css/: styles.css
d7/: test.hs
double-letters/: .gitignore  Main.hs  double-letters.cabal  stack.yaml
dp/: mean.py
elfaro/: elfaro.dot  elfarol.hs
frog/: frog.py
guess_scrabble/: main.hs
insects/: cp.dot.bkp  insects.hs  noname.dot
ircri/: bot.hs  bot.py  indexer.py
lists/: list.hs
mpmp/10/: main.hs
mpmp/12/: main.hs
mpmp/3/: main  main.hs
mpmp/6/: main.hs
mpmp/7/: main  main.hs
ortools/: test_ortools.py
pipes/: 1.hs  2.hs  3.hs  4.hs  5.hs  README.md
pokemon/: pokemon.hs
pso/: pso.hs  results
py_iterator_complexity/: test.py
q/: q.py
raptors/: raptors.hs  recheck.sh  test.sh
reservoir_sampling/: plot.sh  prob.py  rs.hs  rs.py
reservoir_sampling/test/: test.py
resistances/: r.hs
sensitivity/: cabal.sandbox.config  test.hs
ships/: ships.hs  test.sh
soar/: maze.soar
word-building/: .gitignore  Main.hs  word-building.cabal
