name:                test
version:             0.1.0.0
synopsis:            Simple test of acid-state

license:             BSD3
license-file:        LICENSE
author:              Mihai Maruseac
maintainer:          mihai.maruseac@gmail.com

build-type:          Simple

cabal-version:       >=1.10

executable test
  default-language:  Haskell2010
  ghc-options:       -Wall -O2
  main-is:           Main.hs

  build-depends:
    acid-state >= 0.12,
    base >=4.6,
    bytestring >=0.10,
    mtl >=2.2,
    safecopy >=0.8
