name:                candy-simulator

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            Simulator to find the proper amount of candy for max APs
description:         Simulator to determine a proper candy-taking strategy in
                     the game of Pardus. See README.md for more.

homepage:            https://github.com/mihaimaruseac/petulant-octo-avenger
license:             BSD3
license-file:        LICENSE
author:              Mihai Maruseac
maintainer:          mihai.maruseac@gmail.com
copyright:           No copyright infringement on Pardus intended.

category:            Game
build-type:          Simple

extra-source-files:
  README.md

cabal-version:       >=1.10

executable candy-simulator
  default-language:    Haskell2010
  main-is:           simulator.hs

  build-depends:
    base >=4.6,
    mtl >= 2.2,
    tf-random >=0.1
