cabal-version: >= 1.10
name:           word-building
version:        0.1.0.0
description:    Word building puzzle
author:         Mihai Maruseac
maintainer:     mihai.maruseac@gmail.com
copyright:      2018 Mihai Maruseac
build-type:     Simple

executable exe
  main-is: Main.hs
  hs-source-dirs: .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
      base >=4.7 && <5
    , containers
